website publish test

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="preload" href="../style/fonts/Lato/Lato-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+    <link rel="preload" href="style/fonts/Lato/Lato-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="../style/javascript/navJS.js"></script>
-    <script src="../style/javascript/lightbox.js"></script>
-    <link rel="stylesheet" href="../style/css/mystyle.css">
+    <script src="style/javascript/navJS.js"></script>
+    <script src="style/javascript/lightbox.js"></script>
+    <link rel="stylesheet" href="style/css/mystyle.css">
 </head>
 <body>
 
@@ -24,26 +24,26 @@
     <div class="container-fluid">
 
         <div class="navbar-header">
-            <a class="navbar-brand" href="home.html">HOMBOI PHOTOGRAPHY</a>
+            <a class="navbar-brand" href="index.html">HOMBOI PHOTOGRAPHY</a>
         </div>
 
         <div class="nav navbar-nav navbar-right" style="text-transform: uppercase">
             <ul class="nav navbar-nav">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
 
                 <li class="portDrop">
-                    <a href="portfolio.html">Portfolio <span class="caret"></span></a>
+                    <a href="pages/portfolio.html">Portfolio <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="documentary.html">Documentary</a></li>
-                        <li><a href="phonePhotography.html">Phone Photography</a></li>
-                        <li><a href="portraits.html">Portrait</a></li>
-                        <li><a href="weddings.html">Weddings</a></li>
+                        <li><a href="pages/documentary.html">Documentary</a></li>
+                        <li><a href="pages/phonePhotography.html">Phone Photography</a></li>
+                        <li><a href="pages/portraits.html">Portrait</a></li>
+                        <li><a href="pages/weddings.html">Weddings</a></li>
                     </ul>
                 </li>
 
-                <li><a href="packages.html">Packages</a></li>
-                <li><a href="inquiry.html">Inquire</a></li>
-                <li><a href="aboutUs.html">About Us</a></li>
+                <li><a href="pages/packages.html">Packages</a></li>
+                <li><a href="pages/inquiry.html">Inquire</a></li>
+                <li><a href="pages/aboutUs.html">About Us</a></li>
             </ul>
         </div>
 
@@ -55,22 +55,22 @@
     <div class="carousel-inner">
         <div class="item active">
             <div class="row no-gutters">
-                <div class="col-sm-6"><img src="../images/sample2.jpg" alt="image"></div>
-                <div class="col-sm-6"><img src="../images/sample3.jpg" alt="image"></div>
+                <div class="col-sm-6"><img src="images/sample2.jpg" alt="image"></div>
+                <div class="col-sm-6"><img src="images/sample3.jpg" alt="image"></div>
             </div>
         </div>
 
         <div class="item">
             <div class="row no-gutters">
-                <div class="col-sm-6"><img src="../images/sample.jpg" alt="image"></div>
-                <div class="col-sm-6"><img src="../images/sample4.jpg" alt="image"></div>
+                <div class="col-sm-6"><img src="images/sample.jpg" alt="image"></div>
+                <div class="col-sm-6"><img src="images/sample4.jpg" alt="image"></div>
             </div>
         </div>
 
         <div class="item">
             <div class="row no-gutters">
-                <div class="col-sm-6"><img src="../images/sample5.jpg" alt="image"></div>
-                <div class="col-sm-6"><img src="../images/sample6.jpg" alt="image"></div>
+                <div class="col-sm-6"><img src="images/sample5.jpg" alt="image"></div>
+                <div class="col-sm-6"><img src="images/sample6.jpg" alt="image"></div>
             </div>
         </div>
     </div>
@@ -95,31 +95,31 @@
 
 <div class="container-fluid miniGallery">
     <div class="col-sm-4 mgRow">
-        <img class="clickable-img" src="../images/sample7.jpg" alt="image">
-        <img class="clickable-img" src="../images/sample8.jpg" alt="image">
-        <img class="clickable-img" src="../images/sample9.jpg" alt="image">
+        <img class="clickable-img" src="images/sample7.jpg" alt="image">
+        <img class="clickable-img" src="images/sample8.jpg" alt="image">
+        <img class="clickable-img" src="images/sample9.jpg" alt="image">
     </div>
 
     <div class="col-sm-4 mgRow">
-        <img class="clickable-img" src="../images/sample8.jpg" alt="image">
-        <img class="clickable-img" src="../images/sample9.jpg" alt="image">
-        <img class="clickable-img" src="../images/sample10.jpg" alt="image">
+        <img class="clickable-img" src="images/sample8.jpg" alt="image">
+        <img class="clickable-img" src="images/sample9.jpg" alt="image">
+        <img class="clickable-img" src="images/sample10.jpg" alt="image">
     </div>
 
     <div class="col-sm-4 mgRow">
-        <img class="clickable-img" src="../images/sample10.jpg" alt="image">
-        <img class="clickable-img" src="../images/sample7.jpg" alt="image">
-        <img class="clickable-img" src="../images/sample8.jpg" alt="image">
+        <img class="clickable-img" src="images/sample10.jpg" alt="image">
+        <img class="clickable-img" src="images/sample7.jpg" alt="image">
+        <img class="clickable-img" src="images/sample8.jpg" alt="image">
     </div>
 </div>
 
 <div class="container-fluid msgCont" style="margin-top: 5vh">
     <h2 style="font-weight: 100; text-transform: uppercase; margin-bottom: 3vh">Learn More:</h2>
     <ul class="pagination">
-        <li style="font-weight: 200; text-transform: uppercase"><a href="portfolio.html">Portfolio</a></li>
-        <li style="font-weight: 200; text-transform: uppercase"><a href="packages.html">Packages</a></li>
-        <li style="font-weight: 200; text-transform: uppercase"><a href="inquiry.html">Inquire</a></li>
-        <li style="font-weight: 200; text-transform: uppercase"><a href="aboutUs.html">About Us</a></li>
+        <li style="font-weight: 200; text-transform: uppercase"><a href="pages/portfolio.html">Portfolio</a></li>
+        <li style="font-weight: 200; text-transform: uppercase"><a href="pages/packages.html">Packages</a></li>
+        <li style="font-weight: 200; text-transform: uppercase"><a href="pages/inquiry.html">Inquire</a></li>
+        <li style="font-weight: 200; text-transform: uppercase"><a href="pages/aboutUs.html">About Us</a></li>
     </ul>
 </div>
 
