--- a/pages/phonePhotography.html
+++ b/pages/phonePhotography.html
@@ -24,12 +24,12 @@
     <div class="container-fluid">
 
         <div class="navbar-header">
-            <a class="navbar-brand" href="home.html">HOMBOI PHOTOGRAPHY</a>
+            <a class="navbar-brand" href="../index.html">HOMBOI PHOTOGRAPHY</a>
         </div>
 
         <div class="nav navbar-nav navbar-right" style="text-transform: uppercase">
             <ul class="nav navbar-nav">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
 
                 <li class="portDrop">
                     <a href="portfolio.html">Portfolio <span class="caret"></span></a>
