inquiry and about us lacking

--- a/pages/packages.html
+++ b/pages/packages.html
@@ -48,6 +48,9 @@
     </div>
 </nav>
 
+<div class="msgCont" style="height: 1vh; align-content: center; justify-content: center; display: flex; margin-bottom: 4vh; margin-top: 4vh">
+</div>
+
 <div class="container-fluid pkgCont">
     <img class="col-sm-6" src="../images/sample.jpg">
     <div class="col-sm-6 pkgRates">
@@ -61,6 +64,14 @@
         </div>
         <p class="total"><span class="desc">Price</span> <span class="price">Ksh. 35,000</span></p>
     </div>
+</div>
+
+<div class="msgCont" style="height: 5vh; align-content: center; justify-content: center; display: flex; margin-bottom: 4vh">
+    <div style="width: 40vw; border-bottom: .2vh solid #f1f1f1;">
+    </div>
+</div>
+
+
 </div>
 
 <div class="container-fluid pkgCont">
@@ -79,6 +90,12 @@
     <img class="col-sm-6" src="../images/sample2.jpg">
 </div>
 
+<div class="msgCont" style="height: 5vh; align-content: center; justify-content: center; display: flex; margin-bottom: 4vh">
+    <div style="width: 40vw; border-bottom: .2vh solid #f1f1f1;">
+    </div>
+</div>
+
+
 <div class="container-fluid pkgCont">
     <img class="col-sm-6" src="../images/sample3.jpg">
     <div class="col-sm-6 pkgRates">
@@ -95,6 +112,12 @@
     </div>
 </div>
 
+
+<div class="msgCont" style="height: 5vh; align-content: center; justify-content: center; display: flex; margin-bottom: 4vh">
+    <div style="width: 40vw; border-bottom: .2vh solid #f1f1f1;">
+    </div>
+</div>
+
 <div class="container-fluid pkgCont">
     <div class="col-sm-6 pkgRates" style="padding-right: 5vw">
         <div class="ratesWrapper">
@@ -108,6 +131,12 @@
     </div>
     <img class="col-sm-6" src="../images/sample4.jpg">
 </div>
+
+<div class="msgCont" style="height: 5vh; align-content: center; justify-content: center; display: flex; margin-bottom: 4vh">
+    <div style="width: 40vw; border-bottom: .2vh solid #f1f1f1;">
+    </div>
+</div>
+
 
 <div class="container-fluid pkgCont">
     <img class="col-sm-6" src="../images/sample5.jpg">
@@ -126,6 +155,12 @@
         <p class="total"><span class="desc">Price</span> <span class="price">Ksh. 65,000</span></p>
     </div>
 </div>
+
+<div class="msgCont" style="height: 5vh; align-content: center; justify-content: center; display: flex; margin-bottom: 4vh">
+    <div style="width: 40vw; border-bottom: .2vh solid #f1f1f1;">
+    </div>
+</div>
+
 
 <div class="container-fluid msgCont">
     <h2 style="font-weight: 100; text-transform: uppercase; margin-bottom: 3vh">Detailed Pricing for Custom Packages are Available</h2>
