--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -6,12 +6,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="preload" href="../style/fonts/Lato/Lato-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="../style/javascript/navJS.js"></script>
     <link rel="stylesheet" href="../style/css/mystyle.css">
 </head>
 <body>
+
+<div class="homeHeader jumbotron palette">
+    <h1 style="text-transform: uppercase; font-weight: 200">About Us</h1>
+    <h4 style="text-transform: uppercase; font-weight: 100; color: white">Meet the team</h4>
+</div>
+
 <nav class="navbar custom-nav">
     <div class="container-fluid">
 
@@ -32,7 +39,6 @@
                         <li><a href="weddings.html">Weddings</a></li>
                     </ul>
                 </li>
-
                 <li><a href="packages.html">Packages</a></li>
                 <li><a href="inquiry.html">Inquire</a></li>
                 <li><a href="aboutUs.html">About Us</a></li>
@@ -41,5 +47,39 @@
 
     </div>
 </nav>
+
+<div class="msgCont" style="height: 1vh; align-content: center; justify-content: center; display: flex; margin-bottom: 4vh; margin-top: 4vh">
+</div>
+
+<div class="container-fluid pkgCont">
+    <img class="col-sm-6" src="../images/sample.jpg">
+    <div class="col-sm-6 pkgRates">
+        <div class="ratesWrapper">
+            <h2>Event</h2>
+            <h4>Package 1</h4>
+            <p class="rateSpacer"></p>
+            <p><span class="desc">3 Hours</span> <span class="price">Ksh. 9,000</span></p>
+            <p><span class="desc">Half Day</span> <span class="price">Ksh. 20,000</span></p>
+            <p><span class="desc">Full Day</span> <span class="price">Ksh. 35,000</span></p>
+        </div>
+        <p class="total"><span class="desc">Price</span> <span class="price">Ksh. 35,000</span></p>
+    </div>
+</div>
+
+<div class="container-fluid pkgCont">
+    <img class="col-sm-6" src="../images/sample.jpg">
+    <div class="col-sm-6 pkgRates">
+        <div class="ratesWrapper">
+            <h2>Event</h2>
+            <h4>Package 1</h4>
+            <p class="rateSpacer"></p>
+            <p><span class="desc">3 Hours</span> <span class="price">Ksh. 9,000</span></p>
+            <p><span class="desc">Half Day</span> <span class="price">Ksh. 20,000</span></p>
+            <p><span class="desc">Full Day</span> <span class="price">Ksh. 35,000</span></p>
+        </div>
+        <p class="total"><span class="desc">Price</span> <span class="price">Ksh. 35,000</span></p>
+    </div>
+</div>
+
 </body>
 </html>
